tests/snapshots/sfc/ts/patches__static_string_with_newline.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const multiline = `Line 1
Line 2
Line 3`

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("pre", null, _toDisplayString(multiline)))
}
}

})
