tests/snapshots/sfc/ts/patches__transition_inside_v_if_should_use_builtin.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, Transition as _Transition, withCtx as _withCtx } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("div", null, "content")

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const show = ref(true)

return (_ctx: any,_cache: any) => {
  return (show.value)
    ? (_openBlock(), _createBlock(_Transition, {
      key: 0,
      name: "fade"
    }, {
      default: _withCtx(() => [
        _hoisted_1
      ]),
      _: 1 /* STABLE */
    }))
    : _createCommentVNode("v-if", true)
}
}

})
