tests/snapshots/sfc/ts/patches__type_comparison_should_not_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: ['type'],
  setup(__props: any) {

const props = __props
const isButton = props.type === 'button'
const isLink = props.type !== 'link'

return (_ctx: any,_cache: any) => {
  return (_unref(isButton))
    ? (_openBlock(), _createElementBlock("button", { key: 0 }, "Button"))
    : (!_unref(isLink))
      ? (_openBlock(), _createElementBlock("a", {
        key: 1,
        href: "#"
      }, "Link"))
    : _createCommentVNode("v-if", true)
}
}

})
