tests/snapshots/sfc/ts/patches__v_else_if_with_v_bind_object_spread.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { mergeProps as _mergeProps, openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'
import Icon from './Icon.vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const mode = ref('edit')
const iconProps = { size: 24, color: 'blue' }

return (_ctx: any,_cache: any) => {
  return (mode.value === 'view')
    ? (_openBlock(), _createBlock(Icon, {
      key: 0,
      name: "eye"
    }))
    : (mode.value === 'edit')
      ? (_openBlock(), _createBlock(Icon, _mergeProps({ key: 1 }, iconProps, {
        name: "pencil"
      }), null, 16 /* FULL_PROPS */))
    : (_openBlock(), _createBlock(Icon, {
      key: 2,
      name: "default"
    }))
}
}

})
