tests/snapshots/sfc/ts/patches__v_for_with_custom_directive_on_element.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveDirective as _resolveDirective, withDirectives as _withDirectives, toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const list = [1, 2, 3]

return (_ctx: any,_cache: any) => {
  const _directive_focus = _resolveDirective("focus")

  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(list, (n) => {
    return _withDirectives((_openBlock(), _createElementBlock("span", {
      key: n
    }, _toDisplayString(n), 1 /* TEXT */)), [
      [_directive_focus]
    ])
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
