tests/snapshots/sfc/ts/patches__v_if_slot_outlet_with_v_else.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { renderSlot as _renderSlot, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const showing = ref(false)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, [
    (showing.value)
      ? _renderSlot(_ctx.$slots, "default", { key: 0 })
      : _renderSlot(_ctx.$slots, "fallback", { key: 1 })
  ]))
}
}

})
